# prover9

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  VERSION_DATE.h  discrimb.c  interp.c  ivy.c  mindex.c
ladr/: CMakeLists.txt  README.txt  avltree.c  clash.c  clock.c  clock.h  complex.c  demod.c  discrimw.c  flatdemod.c  formula.c  formula.h  interp.c  memory.h  symbols.c
mace4/: CMakeLists.txt  mace4.c  msearch.c  print.c  select.c
provers/: CMakeLists.txt  README.txt  cgrep.c  iterate4.c  mprover.c  search.c  tptp_to_ladr.c
