add_library(ladr STATIC
    accanon.c
    accanon.h
    ac_redun.c
    ac_redun.h
    attrib.c
    attrib.h
    avltree.c
    avltree.h
    backdemod.c
    backdemod.h
    banner.c
    banner.h
    basic.c
    basic.h
    btm.c
    btm.h
    btu.c
    btu.h
    clash.c
    clash.h
    clause_eval.c
    clause_eval.h
    clauseid.c
    clauseid.h
    clause_misc.c
    clause_misc.h
    clauses.c
    clauses.h
    clausify.c
    clausify.h
    clist.c
    clist.h
    clock.c
    clock.h
    cnf.c
    cnf.h
    complex.c
    complex.h
    compress.c
    compress.h
    definitions.c
    definitions.h
    demod.c
    demod.h
    dioph.c
    dioph.h
    discrimb.c
    discrimb.h
    discrim.c
    discrim.h
    discrimw.c
    discrimw.h
    di_tree.c
    di_tree.h
    dollar.c
    dollar.h
    fastparse.c
    fastparse.h
    fatal.c
    fatal.h
    features.c
    features.h
    flatdemod.c
    flatdemod.h
    flatterm.c
    flatterm.h
    formula.c
    formula.h
    fpa.c
    fpa.h
    fpalist.c
    fpalist.h
    glist.c
    glist.h
    hash.c
    hash.h
    header.h
    hints.c
    hints.h
    ibuffer.c
    ibuffer.h
    index.h
    int_code.c
    int_code.h
    interp.c
    interp.h
    ioutil.c
    ioutil.h
    ivy.c
    ivy.h
    just.c
    just.h
    ladr.h
    lindex.c
    lindex.h
    listterm.c
    listterm.h
    literals.c
    literals.h
    maximal.c
    maximal.h
    memory.c
    memory.h
    mindex.c
    mindex.h
    multiset.c
    multiset.h
    nonport.c
    nonport.h
    options.c
    options.h
    order.c
    order.h
    paramod.c
    paramod.h
    parautil.c
    parautil.h
    parse.c
    parse.h
    pindex.c
    pindex.h
    random.c
    random.h
    resolve.c
    resolve.h
    std_options.c
    std_options.h
    strbuf.c
    strbuf.h
    string.c
    string.h
    subsume.c
    subsume.h
    symbols.c
    symbols.h
    term.c
    termflag.c
    termflag.h
    term.h
    termorder.c
    termorder.h
    tlist.c
    tlist.h
    topform.c
    topform.h
    top_input.c
    top_input.h
    tptp_trans.c
    tptp_trans.h
    unify.c
    unify.h
    weight2.c
    weight2.h
    weight.c
    weight.h
    xproofs.c
    xproofs.h
)
